added header style

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="container">
 
         <header>
-            <a href="#"><img src="./images/wildbeast.svg" alt="WildBeast"></a>
+            <a href="#" class="logo"><img src="./images/wildbeast.svg" alt="WildBeast"></a>
             <nav>
                 <ul>
                     <li><a href="#">sobre</a></li>
