--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
         <footer>
             <p>&copy; Origamid | 2020</p>
-            <p><a href="https://www.youtube.com/watch?v=hKXOVD2Yrj8">Wacth</a></p>
+            <p><a href="https://www.youtube.com/watch?v=hKXOVD2Yrj8">Watch</a></p>
         </footer>
     </section>
 </body>
